--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
         "fix:eslint": "eslint --ext .js,.vue resources/js/ --fix"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
+        "@tailwindcss/forms": "^0.5.10",
         "@vitejs/plugin-vue": "^5.2.4",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "eslint": "^9.27.0",
         "eslint-plugin-vue": "^10.1.0",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
+        "postcss": "^8.5.4",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.2.4"
     },
     "dependencies": {
